--- a/style.css
+++ b/style.css
@@ -1,14 +1,39 @@
+body {
+	background-color: #7FFFD4;
+}
+
+h1 {
+	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 24px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	text-align: center;
+	margin-bottom: 4px;
+}
+
+#message {
+		font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 16px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	text-align: center;
+}
+
 td {
 	text-align: center;
 	font-weight: bold;
 	background-color: green;
 	font-size: 60px; 
+	border-radius: 10px;
 }
 
 table {
-	margin: auto;
 	cursor: crosshair;
   background-color: red;
  	height: 400px;
  	width: 400px;
+ 	margin-left: auto;
+  margin-right: auto;
 }
