--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1 {
 	margin-bottom: 4px;
 }
 
-#message {
+.message {
 		font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 	font-size: 16px;
 	font-style: normal;
@@ -35,4 +35,12 @@ table {
  	width: 400px;
  	margin-left: auto;
   margin-right: auto;
+}
+
+.X {
+	background-image: url(images/X.png);
+}
+
+.O {
+	background-image: url(images/O.png);
 }
