--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 .message {
-		font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 	font-size: 16px;
 	font-style: normal;
 	font-variant: normal;
@@ -43,4 +43,15 @@ table {
 
 .O {
 	background-image: url(images/O.png);
+}
+
+#win {
+	font-size: 40px;
+	cursor: pointer;
+	background-color: pink;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	text-align: center;
 }
